<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Czas pracy</string>
    <string name="action_settings">Settings</string>
    <string name="Username">Login</string>
    <string name="Password">Hasło</string>
    <string name="LoginPost">Zaloguj</string>
    <string name="App">Czas pracy</string>
    <string name="LoginStatus">Status zalogowania</string>
    <string name="Status">Nie zalogowano</string>

</resources>
